# AES_Cipher

./: .gitignore
aes_nonoptimized/: CMakeLists.txt  aes.c  operation.c  operation.h
aes_optimized/: CMakeLists.txt  aes_dec.c  aes_dec.h  aes_enc.c  aes_enc.h  aes_key_scheduling.c  aes_key_scheduling.h  aes_utils.c  aes_utils.h  crypto_common.c  crypto_common.h  debug.c  debug.h  file_io.c  file_io.h  main.c  mode_of_operation.c  mode_of_operation.h  padding.c  padding.h
aes_table_generator/: CMakeLists.txt  main.c  operation.c  operation.h
